--- a/reports/ut_report.xml
+++ b/reports/ut_report.xml
@@ -1,7 +1,30 @@
 <testExecutions version="1">
+  <file path="src/app/book/book-detail/book-detail.component.spec.ts">
+    <testCase name="BookDetailComponent should have a p.h3.p-3 element with bookDetail.name" duration="26"/>
+    <testCase name="BookDetailComponent should have 4 &lt;dd> elements" duration="4"/>
+    <testCase name="BookDetailComponent should create" duration="2"/>
+    <testCase name="BookDetailComponent should have an img element with alt= bookDetail.name" duration="3"/>
+    <testCase name="BookDetailComponent should have one dd tag for component.bookDetail.publishingDate" duration="3"/>
+    <testCase name="BookDetailComponent should have an img element with src= bookDetail.image" duration="2"/>
+    <testCase name="BookDetailComponent should have one dd tag for component.bookDetail.isbn" duration="2"/>
+    <testCase name="BookDetailComponent should have one dd tag for component.bookDetail.editorial.name" duration="1"/>
+  </file>
+  <file path="src/app/book/book-list/book-list.component.spec.ts">
+    <testCase name="BookListComponent should have the corresponding src to the book image and alt to the book name" duration="10"/>
+    <testCase name="BookListComponent should have p tag with the book.editorial.name" duration="3"/>
+    <testCase name="BookListComponent should have h5 tag with the book.name" duration="3"/>
+    <testCase name="BookListComponent should have 9 &lt;div.col.mb-2> elements and the deleted book should not exist" duration="2"/>
+    <testCase name="BookListComponent should have 10 &lt;card.p-2> elements" duration="2"/>
+    <testCase name="BookListComponent should create" duration="2"/>
+    <testCase name="BookListComponent should have 10 &lt;img> elements" duration="2"/>
+    <testCase name="BookListComponent should have 10 &lt;div.card-body> elements" duration="2"/>
+    <testCase name="BookListComponent should have 10 &lt;div.col.mb-2> elements" duration="2"/>
+  </file>
   <file path="src/app/app.component.spec.ts">
-    <testCase name="AppComponent should have as title 'base-project'" duration="118"/>
-    <testCase name="AppComponent should create the app" duration="14"/>
-    <testCase name="AppComponent should render title" duration="13"/>
+    <testCase name="AppComponent should have as title 'base-project'" duration="4"/>
+    <testCase name="AppComponent should create the app" duration="1"/>
+  </file>
+  <file path="src/app/book/book.service.spec.ts">
+    <testCase name="Service: Book should ..." duration="1"/>
   </file>
 </testExecutions>
